# deepbound

./: .gitignore  CMakeLists.txt  Makefile
assets/config/: color_maps.json
assets/deepbound/tiles/: rock.json  soil.json
assets/deepbound/worldgen/: rockstrata.json
assets/tiles/liquid/: water.json
assets/tiles/soil/: gravel.json  sand.json  soil.json
assets/tiles/stone/: rock.json
assets/worldgen/: blocklayers.json  caves.json  geologicprovinces.json  landforms.json  provinces.json
docs/: style_guide.md
src/core/assets/: asset_manager.cpp  asset_manager.hpp  json_loader.cpp  json_loader.hpp  texture_atlas.cpp  texture_atlas.hpp
src/core/common/: resource_id.cpp  resource_id.hpp
src/core/content/: entity.cpp  entity.hpp  item.cpp  item.hpp  tile.cpp  tile.hpp
src/core/graphics/: camera.hpp  chunk_renderer.cpp  chunk_renderer.hpp  shader.cpp  shader.hpp  window.cpp  window.hpp
src/core/worldgen/: chunk.cpp  chunk.hpp  fastnoise_wrapper.cpp  fastnoise_wrapper.hpp  landform.cpp  landform.hpp  rock_strata.cpp  rock_strata.hpp  world.cpp  world.hpp  world_gen_context.cpp  world_gen_context.hpp  world_generator.cpp  world_generator.hpp
src/editor/: main.cpp
src/game/: main.cpp
